SCIP version NEXT
=================

performance improvements:
- cuts generated from certain quadratic constraints with convex feasible region are now global

new parameters:
- "lp/checkfarkas" that enables the check of infeasibility proofs from the LP

deleted files:
- presol_implfree removed

SCIP version 5.0.2
=================

performance improvements:
- deactivate gauge cuts

fixed bugs:
- suppress debug solution warnings during problem creation stage
- fixed check for activated debugging solution in components constraint handler
- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler
- fixed non-deterministic behavior in OBBT propagator
- don't disable LP presolving when using Xpress as LP solver
- fixed possible NULL pointer usage in cons_pseudoboolean

data structures:
- expression interpreter objects are now stored in the block memory

SCIP version 5.0.1
==================

performance improvements:
- increased threshold when to scale up cuts that are generated by nonlinear constraint handlers
- disable disaggregation of quadratic constraints by changing the default for constraints/quadratic/maxdisaggrsize to 1
  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)
- test additional scaling factors in CMIR cut generatio heuristic
- cleaned up implementation of the cut selection procedure and added new cut quality measure
- use random tie-breaking in cut selection

features:
- allow output of lower bounds for visualization
- add number of conflict constraints found by diving heuristics to statistics
- added symmetry detection for linking constraints